<resources>
    <string name="app_name">Assignment2</string>
    <string name="game_title">Adventure</string>
    <string name="subtitle">The boring adventures of a squirrel hiding acorns for the winter,
        but the winter never comes because it has not been coded</string>
    <string name="start_button">Start</string>
    <string name="pickup_button">Pickup</string>
    <string name="inventory_button">Inventory</string>
    <string name="map_button">Map</string>
    <string name="up_arrow">Up Arrow</string>
    <string name="down_arrow">Down Arrow</string>
    <string name="left_arrow">Left Arrow</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="drop_button">Drop</string>
    <string name="drop1">1</string>
    <string name="drop2">2</string>
    <string name="drop3">3</string>
    <string name="drop4">4</string>
    <string name="drop5">5</string>
</resources>
