<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_inventory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:gravity="center">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:text="@string/inventory_button"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textSize="25sp" />
    <ImageView
        android:id="@+id/inventory_image_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:src="@drawable/grass_icon" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/drop_button"
        android:textSize="25sp"
        android:contentDescription="@string/drop1"
        android:onClick="dropAcorn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/inventory_image_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:src="@drawable/grass_icon" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/drop_button"
        android:textSize="25sp"
        android:contentDescription="@string/drop2"
        android:onClick="dropAcorn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textSize="25sp" />
    <ImageView
        android:id="@+id/inventory_image_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:src="@drawable/grass_icon" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/drop_button"
        android:textSize="25sp"
        android:contentDescription="@string/drop3"
        android:onClick="dropAcorn"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4"
        android:textSize="25sp" />
    <ImageView
        android:id="@+id/inventory_image_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:src="@drawable/grass_icon" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/drop_button"
        android:textSize="25sp"
        android:contentDescription="@string/drop4"
        android:onClick="dropAcorn"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5"
        android:textSize="25sp" />
    <ImageView
        android:id="@+id/inventory_image_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:src="@drawable/grass_icon" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/drop_button"
        android:textSize="25sp"
        android:contentDescription="@string/drop5"
        android:onClick="dropAcorn"/>
</GridLayout>