<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_weight="1">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TableRow>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/button_up"
                    android:layout_weight="1"
                    android:src="@drawable/arrow_up"
                    android:contentDescription="@string/up_arrow"
                    android:onClick="moveSquirrel"
                    />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>
            <TableRow>
                <ImageView
                    android:layout_weight="1"
                    android:src="@drawable/arrow_left"
                    android:contentDescription="@string/left_arrow"
                    android:onClick="moveSquirrel"/>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_weight="1"
                    android:src="@drawable/arrow_right"
                    android:contentDescription="@string/right_arrow"
                    android:onClick="moveSquirrel"/>
            </TableRow>
            <TableRow>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_weight="1"
                    android:src="@drawable/arrow_down"
                    android:contentDescription="@string/down_arrow"
                    android:onClick="moveSquirrel"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/button_pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickup_button"
            android:onClick="pickupAcorn"/>

        <Button
            android:id="@+id/button_inventory_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToInventoryMap"
            android:text="Inventory"/>
    </LinearLayout>

</LinearLayout>